# ursa-markup

./: CONTRIBUTING.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/components/canvas/: CanvasContainer.tsx
src/contexts/: DocumentContext.tsx  index.ts
src/core/: StrokeHistory.ts
src/services/Settings/: config.ts
src/stores/: useDocumentStore.ts
