[package]
name = "ursamarkup"
version = "1.0.0-3"
description = "An opinionated cross-platform tool for marking up images"
authors = ["BasicallyPolaris"]
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
strip = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ursamarkup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
tokio = { version = "1", features = ["time"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = { version = "3", features = ["wayland-data-control"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
